kubernetes/apps/platform/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.lab.ryantaylor.tech`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - name: whoami
          port: 80
  tls: {}
